// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitKotlin snapshots > async module (async throws function) 1`] = `
"==== app/net/Functions.kt (module: app.net) ====
// Generated by ClearKrypt 0.1.0 from src/net.ck (module app.net).
// Do not edit. Changes will be overwritten.

package app.net

import clearkrypt.ID

/**
 * @throws NetworkError
 */
suspend fun fetchUser(id: ID): RemoteUser {
    return RemoteUser(id = id, name = "Remote")
}

==== app/net/NetworkError.kt (module: app.net) ====
// Generated by ClearKrypt 0.1.0 from src/net.ck (module app.net).
// Do not edit. Changes will be overwritten.

package app.net

sealed class NetworkError : Exception() {
    data object Timeout : NetworkError()
    data class Server(val message: String) : NetworkError()
}

==== app/net/RemoteUser.kt (module: app.net) ====
// Generated by ClearKrypt 0.1.0 from src/net.ck (module app.net).
// Do not edit. Changes will be overwritten.

package app.net

import clearkrypt.ID

data class RemoteUser(
    val id: ID,
    val name: String,
)

==== clearkrypt/ClearKrypt.kt (module: clearkrypt) ====
// Generated by ClearKrypt 0.1.0. Shared support definitions.
// Do not edit. Changes will be overwritten.

package clearkrypt

typealias ID = String
typealias Email = String
typealias URL = String
"
`;

exports[`emitKotlin snapshots > cross module project 1`] = `
"==== app/api/Functions.kt (module: app.api) ====
// Generated by ClearKrypt 0.1.0 from src/api.ck (module app.api).
// Do not edit. Changes will be overwritten.

package app.api

import app.models.User

fun welcome(user: User): String {
    return "Welcome, " + user.name
}

==== app/models/User.kt (module: app.models) ====
// Generated by ClearKrypt 0.1.0 from src/models.ck (module app.models).
// Do not edit. Changes will be overwritten.

package app.models

import clearkrypt.ID

data class User(
    val id: ID,
    val name: String,
)

==== clearkrypt/ClearKrypt.kt (module: clearkrypt) ====
// Generated by ClearKrypt 0.1.0. Shared support definitions.
// Do not edit. Changes will be overwritten.

package clearkrypt

typealias ID = String
typealias Email = String
typealias URL = String
"
`;

exports[`emitKotlin snapshots > functions module (expressions, if/else, let) 1`] = `
"==== app/text/Functions.kt (module: app.text) ====
// Generated by ClearKrypt 0.1.0 from src/text.ck (module app.text).
// Do not edit. Changes will be overwritten.

package app.text

fun fullName(first: String, last: String): String {
    return first + " " + last
}

fun larger(a: Int, b: Int): Int {
    if (a > b) {
        return a
    } else {
        return b
    }
}

fun describeCount(count: Int): String {
    val label = "items"
    if (count == 1) {
        return "1 item"
    }
    return "many " + label
}

==== clearkrypt/ClearKrypt.kt (module: clearkrypt) ====
// Generated by ClearKrypt 0.1.0. Shared support definitions.
// Do not edit. Changes will be overwritten.

package clearkrypt

typealias ID = String
typealias Email = String
typealias URL = String
"
`;

exports[`emitKotlin snapshots > hello world module 1`] = `
"==== app/main/Functions.kt (module: app.main) ====
// Generated by ClearKrypt 0.1.0 from src/main.ck (module app.main).
// Do not edit. Changes will be overwritten.

package app.main

fun greetingText(greeting: Greeting): String {
    return greeting.message
}

fun friendlyGreeting(message: String): Greeting {
    return Greeting(id = "greeting-1", message = message)
}

==== app/main/Greeting.kt (module: app.main) ====
// Generated by ClearKrypt 0.1.0 from src/main.ck (module app.main).
// Do not edit. Changes will be overwritten.

package app.main

import clearkrypt.ID

data class Greeting(
    val id: ID,
    val message: String,
    val isFriendly: Boolean = true,
)

==== clearkrypt/ClearKrypt.kt (module: clearkrypt) ====
// Generated by ClearKrypt 0.1.0. Shared support definitions.
// Do not edit. Changes will be overwritten.

package clearkrypt

typealias ID = String
typealias Email = String
typealias URL = String
"
`;

exports[`emitKotlin snapshots > types project (kitchen sink model, enums, error) 1`] = `
"==== app/models/AuthError.kt (module: app.models) ====
// Generated by ClearKrypt 0.1.0 from src/models.ck (module app.models).
// Do not edit. Changes will be overwritten.

package app.models

import java.time.Instant

sealed class AuthError : Exception() {
    data object InvalidCredentials : AuthError()
    data class LockedOut(val until: Instant) : AuthError()
    data class Network(val message: String) : AuthError()
}

==== app/models/BookingStatus.kt (module: app.models) ====
// Generated by ClearKrypt 0.1.0 from src/models.ck (module app.models).
// Do not edit. Changes will be overwritten.

package app.models

sealed interface BookingStatus {
    data object Pending : BookingStatus
    data object Confirmed : BookingStatus
    data class Cancelled(val reason: String) : BookingStatus
    data object Completed : BookingStatus
}

==== app/models/OrderStatus.kt (module: app.models) ====
// Generated by ClearKrypt 0.1.0 from src/models.ck (module app.models).
// Do not edit. Changes will be overwritten.

package app.models

enum class OrderStatus {
    Pending,
    Shipped,
    Delivered,
}

==== app/models/Profile.kt (module: app.models) ====
// Generated by ClearKrypt 0.1.0 from src/models.ck (module app.models).
// Do not edit. Changes will be overwritten.

package app.models

import clearkrypt.Email
import clearkrypt.ID
import clearkrypt.URL
import java.math.BigDecimal
import java.time.Instant
import java.time.LocalDate

data class Profile(
    val id: ID,
    val name: String,
    val email: Email,
    val age: Int,
    val rating: Double,
    val balance: BigDecimal,
    val birthday: LocalDate,
    val createdAt: Instant,
    val avatarUrl: URL?,
    val thumbnail: ByteArray,
    val tags: Set<String>,
    val scores: List<Int>,
    val attributes: Map<String, String>,
    val isActive: Boolean = true,
)

==== clearkrypt/ClearKrypt.kt (module: clearkrypt) ====
// Generated by ClearKrypt 0.1.0. Shared support definitions.
// Do not edit. Changes will be overwritten.

package clearkrypt

typealias ID = String
typealias Email = String
typealias URL = String
"
`;
